# sherpa

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json  sherpa.tape
sherpa/: __main__.py  ai.py  cli.py  config.py  display.py  history.py  setup.py
tests/: test_ai.py  test_history.py
