[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sherpa-dev"
version = "0.1.1"
description = "Explains your terminal errors in plain English. Fully local, no API key."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
sherpa = "sherpa.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["sherpa*"]
